Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/multicatch/Neg06.out
Neg06.java:14:16: compiler.err.prob.found.req: (compiler.misc.inconvertible.types: java.lang.String, java.lang.Throwable)
Neg06.java:14:25: compiler.err.prob.found.req: (compiler.misc.inconvertible.types: java.lang.Integer, java.lang.Throwable)
2 errors
